<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_app_converts_naira_to_bitcoin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/introText"
        app:layout_constraintStart_toStartOf="@id/introText"
        android:hint="@string/input_amount_naira"
        android:autofillHints="naira"
        android:inputType="numberDecimal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/convert_to_bitcoin"
        android:backgroundTint="@color/green"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/convert_button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/round_up_to_whole_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:checked="true"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switch_on"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/amount_in_bitcoin"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>